Remove legacy architecture documentation and update Gradle dependencies to Kotlin 2.0.21 and Micronaut 4.5.4. Introduce a new demo script for showcasing hexagonal architecture principles. Enhance error handling and logging in order processing, and implement CLI adapter for order placement. Update tests to ensure coverage across new features.

--- a/config/detekt/detekt.yml
+++ b/config/detekt/detekt.yml
@@ -41,7 +41,7 @@ complexity:
     active: false
   LongMethod:
     active: true
-    threshold: 60
+    threshold: 85
   LongParameterList:
     active: true
     functionThreshold: 6
@@ -128,8 +128,9 @@ style:
     excludeImportStatements: true
   ReturnCount:
     active: true
-    max: 3
-    excludedFunctions: "equals"
+    max: 6
+    excludedFunctions:
+      - "equals"
   UnusedPrivateMember:
     active: true
   WildcardImport:
